--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,98 +5,107 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        tools:context=".MainActivity"
+        android:background="@drawable/wallpaper"
         android:orientation="vertical"
-        android:weightSum="2">
+        tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:text="@string/wordTheme"
-            android:textColor="@color/mentalTheme"
-            android:textSize="24sp"
-            app:drawableEndCompat="@drawable/ic_mental_theme"
-            android:textStyle="bold"
-            tools:ignore="MissingConstraints"
-            android:gravity="center"
-            tools:layout_editor_absoluteX="103dp"
-            tools:layout_editor_absoluteY="156dp" />
+    <LinearLayout
+            android:layout_width="410dp"
+            android:layout_height="437dp"
+            android:background="@color/mentalBackground"
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints">
 
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:text="@string/login"
-            android:textColor="@color/mentalTheme"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="103dp"
-            tools:layout_editor_absoluteY="214dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/email"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="-16dp"
-            tools:layout_editor_absoluteY="265dp"
-            app:helperText="required*"
-            app:helperTextTextColor="@color/red"
-            android:id="@+id/loginEmail">
-
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email_login"
+        <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textEmailAddress"/>
-    </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:text="@string/wordTheme"
+                android:textColor="@color/mentalTheme"
+                android:textSize="30sp"
+                app:drawableEndCompat="@drawable/ic_mental_theme"
+                android:textStyle="bold"
+                tools:ignore="MissingConstraints"
+                android:gravity="center"
+                tools:layout_editor_absoluteY="156dp"
+                android:id="@+id/textView2" />
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/loginPassword"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="315dp"
-            tools:ignore="MissingConstraints"
-            app:helperText="required*"
-            app:helperTextTextColor="@color/red">
-
-        <com.google.android.material.textfield.TextInputEditText
-
+        <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textPassword"
-                android:id="@+id/password_login"/>
-    </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:text="@string/login"
+                android:textColor="@color/mentalTheme"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="256dp" />
 
-    <Button
-            android:id="@+id/logIn_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/mentalTheme"
-            android:text="@string/login"
-            android:textColor="#fff"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="-26dp"
-            tools:layout_editor_absoluteY="373dp" />
+        <com.google.android.material.textfield.TextInputLayout
+
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="300dp"
+                android:layout_height="55dp"
+                android:hint="@string/email"
+                android:layout_gravity="center"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="356dp"
+                app:helperText="required*"
+                app:helperTextTextColor="@color/red"
+                android:id="@+id/loginEmail">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/loginPassword"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="300dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:hint="@string/password"
+                tools:layout_editor_absoluteY="456dp"
+                tools:ignore="MissingConstraints"
+                app:helperText="required*"
+                app:helperTextTextColor="@color/red">
+
+            <com.google.android.material.textfield.TextInputEditText
+
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:inputType="textPassword"
+                    android:id="@+id/password_login" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    <TextView
-            android:id="@+id/logIn_sign"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/go_to_sign_up"
-            android:textColor="@color/wordTheme"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="86dp"
-            tools:layout_editor_absoluteY="445dp" />
+        <Button
+                android:id="@+id/logIn_button"
+                android:layout_width="300dp"
+                android:layout_height="55dp"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/mentalTheme"
+                android:text="@string/login"
+                android:textColor="#fff"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="556dp" />
 
+        <TextView
+                android:id="@+id/logIn_sign"
+                android:layout_width="329dp"
+                android:layout_height="153dp"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:text="@string/go_to_sign_up"
+                android:textColor="@color/wordTheme"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="88dp"
+                tools:layout_editor_absoluteY="656dp" />
+
+    </LinearLayout>
 </LinearLayout>
