--- a/app/src/main/res/layout/activity_patients.xml
+++ b/app/src/main/res/layout/activity_patients.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout_patient"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".patients">
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+            android:id="@+id/app_bar_doctor_patient"
+            layout="@layout/app_bar_doctor_patient"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view_patient"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header_doctor"
+            app:menu="@menu/patient" />
+</androidx.drawerlayout.widget.DrawerLayout>
