--- a/app/src/main/res/layout/fragment_profile_patient.xml
+++ b/app/src/main/res/layout/fragment_profile_patient.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<LinearLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/wallpaper"
-        tools:context=".profileDoctor">
+        tools:context=".profilePatient">
 
 
     <LinearLayout
@@ -24,7 +24,7 @@
     <ImageView
             android:layout_width="200dp"
             android:layout_height="310dp"
-            android:id="@+id/passport"
+            android:id="@+id/passport_patient"
             android:contentDescription="@string/doctorImg" />
 
         <LinearLayout
@@ -42,7 +42,7 @@
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/nameTxt" />
+                    android:id="@+id/nameTxt_patient" />
 
             <TextView
                     android:layout_width="match_parent"
@@ -53,7 +53,7 @@
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/ageTxt" />
+                    android:id="@+id/ageTxt_patient" />
 
             <TextView
                     android:layout_width="match_parent"
@@ -64,7 +64,7 @@
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/emailTxt" />
+                    android:id="@+id/emailTxt_patient" />
 
             <TextView
                     android:layout_width="match_parent"
@@ -75,23 +75,7 @@
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/telephoneTxt" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:backgroundTint="@color/white"
-            android:id="@+id/linearLayout2"
-            tools:ignore="MissingConstraints">
-
-        <LinearLayout
-                android:layout_width = "200dp"
-                android:layout_height = "wrap_content"
-                android:orientation = "vertical">
+                    android:id="@+id/telephoneTxt_patient" />
 
             <TextView
                     android:layout_width="match_parent"
@@ -100,54 +84,12 @@
                     android:text="@string/h"/>
 
             <TextView
-                    android:id="@+id/homeTxt"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="15sp" />
-
-        </LinearLayout>
-        <LinearLayout
-                android:layout_width = "200dp"
-                android:layout_height = "wrap_content"
-                android:orientation = "vertical">
-
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:background="@color/textBackground"
-                    android:text="@string/w"/>
-
-            <TextView
-                    android:id="@+id/workTxt"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="15sp" />
+                    android:layout_height="wrap_content"
+                    android:id="@+id/homeTxt_patient" />
 
         </LinearLayout>
     </LinearLayout>
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:background="@color/textBackground"
-            android:text="@string/c"/>
-
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/specialTxt" />
-
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:background="@color/textBackground"
-            android:text="@string/b"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/biographyTxt" />
-
-
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
