--- a/app/src/main/res/layout/activity_consult_doctor.xml
+++ b/app/src/main/res/layout/activity_consult_doctor.xml
@@ -22,9 +22,9 @@ tools:context=".consultDoctor">
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/patient_height"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="170dp"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:hint="@string/height"
                 tools:ignore="MissingConstraints">
@@ -32,7 +32,7 @@ tools:context=".consultDoctor">
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/patient_height_edit"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="80dp"
                     android:inputType="text">
 
             </com.google.android.material.textfield.TextInputEditText>
@@ -42,9 +42,9 @@ tools:context=".consultDoctor">
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/patient_weight"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="170dp"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:hint="@string/weight"
                 android:layout_marginStart="10dp"
                 tools:ignore="MissingConstraints">
@@ -52,7 +52,7 @@ tools:context=".consultDoctor">
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/patient_weight_edit"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="80dp"
                     android:inputType="text">
 
             </com.google.android.material.textfield.TextInputEditText>
@@ -62,22 +62,22 @@ tools:context=".consultDoctor">
     </LinearLayout>
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="150dp"
             android:orientation="horizontal"
             tools:ignore="MissingConstraints">
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/patient_symptom"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-                android:layout_width="330dp"
-                android:layout_height="70dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
                 android:hint="@string/symptom"
                 tools:ignore="MissingConstraints">
 
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/patient_symptom_edit"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="150dp"
                     android:inputType="text">
 
             </com.google.android.material.textfield.TextInputEditText>
@@ -89,7 +89,7 @@ tools:context=".consultDoctor">
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/mentalTheme"
-                android:text="@drawable/ic_patients"
+                android:text="Add"
                 tools:ignore="MissingConstraints" />
 
     </LinearLayout>
