--- a/app/src/main/res/layout/activity_patients_records.xml
+++ b/app/src/main/res/layout/activity_patients_records.xml
@@ -9,7 +9,6 @@
     <LinearLayout
             android:layout_width = "match_parent"
             android:layout_height = "match_parent"
-            android:background="@color/mentalBackground"
             android:orientation = "vertical">
 
         <LinearLayout
@@ -19,8 +18,8 @@
 
             <Button
                     android:id="@+id/treat_patient_button"
-                    android:layout_width="150dp"
-                    android:layout_marginLeft="35dp"
+                    android:layout_width="170dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_height="match_parent"
                     android:backgroundTint="@color/mentalTheme"
                     android:text="@string/Treat"
@@ -28,59 +27,19 @@
 
             <Button
                     android:id="@+id/record_button"
-                    android:layout_width="150dp"
-                    android:layout_marginLeft="35dp"
+                    android:layout_width="170dp"
+                    android:textColor="#000"
+                    android:layout_marginLeft="5dp"
                     android:layout_height="match_parent"
-                    android:backgroundTint="@color/mentalTheme"
-                    android:text="@string/record"
-                    android:textColor="#fff" />
+                    android:backgroundTint="@color/mentalBackground"
+                    android:text="@string/record"/>
 
-        </LinearLayout>
-        <LinearLayout
-                android:layout_width = "match_parent"
-                android:layout_height = "250dp"
-                android:orientation = "horizontal">
-
-            <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="match_parent"
-                    android:id="@+id/passportPatient"
-                    android:contentDescription="@string/patientImg" />
-
-            <LinearLayout
-                    android:layout_width = "match_parent"
-                    android:layout_height = "250dp"
-                    android:orientation = "vertical">
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@color/textBackground"
-                        android:text="@string/n"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/text_margin"
-                        android:id = "@+id/treat_patient_name"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@color/textBackground"
-                        android:text="@string/a"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/text_margin"
-                        android:id="@+id/treat_patient_age" />
-            </LinearLayout>
         </LinearLayout>
         <ListView
                 android:id="@+id/treat_patient_list"
-                android:layout_width="wrap_content"
-                android:layout_height="219dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
                 android:divider="#000"
                 android:dividerHeight="1dp"
                 android:footerDividersEnabled="false"
