--- a/app/src/main/res/layout/activity_patients_treatment.xml
+++ b/app/src/main/res/layout/activity_patients_treatment.xml
@@ -22,20 +22,22 @@ tools:context=".patientsTreatment">
 
         <Button
                 android:id="@+id/goRecord"
-                android:layout_width="200dp"
+                android:layout_width="170dp"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/mentalTheme"
                 android:text="@string/record"
                 tools:ignore="MissingConstraints"
+                android:layout_marginLeft="5dp"
                 tools:layout_editor_absoluteY="32dp"
                 tools:layout_editor_absoluteX="193dp" />
 
         <Button
                 android:id="@+id/goTreat"
-                android:layout_width="200dp"
+                android:layout_width="170dp"
+                android:textColor="#000"
                 android:layout_marginLeft="5dp"
                 android:layout_height="match_parent"
-                android:backgroundTint="@color/mentalTheme"
+                android:backgroundTint="@color/mentalBackground"
                 android:text="@string/Treat"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="32dp"
