--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -49,14 +49,14 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/signFirstName"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="160dp"
-                    android:layout_height="50dp"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
                     android:hint="@string/f_name"
                     tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="0dp"
@@ -75,8 +75,8 @@
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/signLastName"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="160dp"
-                    android:layout_height="50dp"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:hint="@string/l_name"
                     tools:ignore="MissingConstraints"
@@ -98,14 +98,14 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/signEmail"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="160dp"
-                    android:layout_height="50dp"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
                     android:hint="@string/email"
                     tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="0dp"
@@ -125,8 +125,8 @@
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/signTelephone"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="160dp"
-                    android:layout_height="50dp"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
                     android:hint="@string/telephone"
                     android:layout_marginStart="10dp"
                     tools:ignore="MissingConstraints"
@@ -149,7 +149,7 @@
                 android:id="@+id/signPassword"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:hint="@string/password"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="221dp">
@@ -198,14 +198,14 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/signAddress"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="160dp"
-                    android:layout_height="50dp"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
                     android:hint="@string/address"
                     tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="0dp"
@@ -226,8 +226,8 @@
             <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/signAge"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="160dp"
-                    android:layout_height="50dp"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:hint="@string/age"
                     tools:ignore="MissingConstraints"
