--- a/app/src/main/res/layout/patient_structure.xml
+++ b/app/src/main/res/layout/patient_structure.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -9,7 +9,8 @@
     <LinearLayout
             android:layout_width = "match_parent"
             android:layout_height = "match_parent"
-            android:orientation = "vertical">
+            android:orientation = "vertical"
+            android:textColor="#000">
 
         <LinearLayout
                 android:layout_width = "match_parent"
@@ -32,80 +33,75 @@
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:background="@color/textBackground"
-                        android:text="@string/n"/>
+                        android:text="@string/n"
+                        android:textColor="#000"/>
 
                 <TextView
                         android:id="@+id/doctor_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:textColor="#000"/>
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:background="@color/textBackground"
-                        android:text="@string/d"/>
+                        android:text="@string/d"
+                        android:textColor="#000"/>
 
                 <TextView
                         android:id="@+id/record_date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:textColor="#000"/>
+
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:background="@color/textBackground"
+                        android:text="@string/h"
+                        android:textColor="#000"/>
+
+                <TextView
+                        android:id="@+id/patient_height"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="15sp"
+                        android:textColor="#000"/>
+
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:background="@color/textBackground"
+                        android:text="@string/w"
+                        android:textColor="#000"/>
+
+                <TextView
+                        android:id="@+id/patient_weight"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="15sp"
+                        android:textColor="#000"/>
+
             </LinearLayout>
         </LinearLayout>
 
-    <LinearLayout
-            android:layout_width = "match_parent"
-            android:layout_height = "50dp"
-            android:orientation = "horizontal">
-
-        <LinearLayout
-                android:layout_width = "200dp"
-                android:layout_height = "wrap_content"
-                android:orientation = "vertical">
-
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:background="@color/textBackground"
-                    android:text="@string/h"/>
-
-            <TextView
-                    android:id="@+id/patient_height"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="15sp" />
-
-        </LinearLayout>
-        <LinearLayout
-        android:layout_width = "200dp"
-        android:layout_height = "wrap_content"
-        android:orientation = "vertical">
-
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:background="@color/textBackground"
-                    android:text="@string/w"/>
-
-            <TextView
-                    android:id="@+id/patient_weight"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="15sp" />
-
-        </LinearLayout>
-    </LinearLayout>
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:background="@color/textBackground"
-                android:text="@string/m"/>
+                android:text="@string/m"
+                android:textColor="#000"/>
 
         <TextView
                 android:id="@+id/patient_medicine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000"
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/patient_analysis"
@@ -117,12 +113,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:background="@color/textBackground"
+                android:textColor="#000"
                 android:text="@string/an"/>
 
         <TextView
                 android:id="@+id/patient_analysis"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000"
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/patient_symptoms"
@@ -135,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:background="@color/textBackground"
+                android:textColor="#000"
                 android:text="@string/si"/>
 
         <TextView
@@ -147,15 +146,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:background="@color/textBackground"
+                android:textColor="#000"
                 android:text="@string/s"/>
 
         <TextView
                 android:id="@+id/patient_symptoms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#000"
                 android:textSize="15sp" />
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
 
 
